[metadata]
name = beoremote
version = 0.0.2
author = Bang & Olufsen
author_email = support@bang-olufsen.dk
description = Beoremote Halo connecting and configuring Home Automation Systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bang-olufsen/beoremote-halo
project_urls =
	     Bug Tracker = https://github.com/bang-olufsen/beoremote-halo/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent

[options]
scripts =
    src/bin/beoremote
package_dir =
    =src
packages=find:
install_requires =
    websocket-client
    zeroconf
    click

[options.packages.find]
where=src
